--- a/config.yaml
+++ b/config.yaml
@@ -56,9 +56,7 @@ display:
       /^chromium:Chromium:Chromium Preferences$/ floating=on
       /^chromium:Chromium:Task Manager/ floating=on
       /^chromium:/ group=0
-      /^claws-mail:Claws-mail:Claws Mail [0-9]+\./ tags=mail
-      /^claws-mail:.+Compose message$/ floating=off
-      /^claws-mail:/ floating=on
+      /Mozilla Thunderbird$/ tags=mail
       /^firefox:/ group=0
       /^gimp:/ tags=gimp
       /^liferea:/ tags=feed
@@ -66,7 +64,6 @@ display:
       /^<nil>:<nil>:Event Tester$/ floating=on # xev
       /^pcmanfm:/ group=0
       /^pinentry/ floating=on
-      /^rdesktop:/ tags=doze floating=on
       /^skype:|^Pidgin:/ tags=chat allow=+activate
       /^sonata:/ tags=1 allow=+activate
       /Thunar:File Operation Progress/ floating=on
@@ -74,8 +71,7 @@ display:
       /^vncviewer:/ floating=on
       /^xmag:/ floating=on
       /^xmessage:/ floating=on tags=/./
-      /^xwrits:/ tags=/./
-      /^zim:/ tags=note
+      /^Spotify( Premium)? - Linux Preview/ tags=music
 
   status:
     arrange:
@@ -88,6 +84,8 @@ display:
       refresh: 30
     volume:
       '@mixer': Master
+      mouse_action:
+        right_click: launch 'pavucontrol'
     disk:
       '@path': $HOME
     network:
@@ -95,7 +93,7 @@ display:
         - '@interface': eth0
           refresh: 60
     weather:
-      '@location': SJC
+      '@location': BOS
     notice:
       control:
         action:
@@ -108,10 +106,11 @@ display:
 script:
   - after: |
       launch 'witray'
-      launch 'clipit'
+      launch 'killall clipit && clipit'
       launch 'gnome-settings-daemon'
       launch 'pidgin'
       launch 'dropbox start'
+      launch 'thunderbird'
       launch '/home/amukherjee/bin/wallpaper.sh'
 
 control:
