--- a/config.yaml
+++ b/config.yaml
@@ -36,7 +36,7 @@ import:
   - control/keyboard/qwerty/zoom
 
 prefer:
-  terminal: gnome-terminal
+  terminal: urxvtcd
   browser: firefox
   editor: gvim
   filer: thunar
