fixed spotify tag

--- a/config.yaml
+++ b/config.yaml
@@ -43,7 +43,7 @@ display:
       /^vncviewer:/ floating=on
       /^xmag:/ floating=on
       /^xmessage:/ floating=on tags=/./
-      /^Spotify( Premium)? - Linux Preview/ tags=music
+      /^spotify:/ tags=music
 
       /^rdesktop:/ tags=work floating=on
 
