Fixed launch menu

--- a/config.yaml
+++ b/config.yaml
@@ -178,7 +178,7 @@ control:
     #-------------------------------------------------------------------------
 
     ${root}i:                 action_menu
-    ${root}e:                 launch_menu
+    ${root}p:                 launch_menu
 
     #-------------------------------------------------------------------------
     # client
