--- a/config.yaml
+++ b/config.yaml
@@ -184,6 +184,7 @@ control:
     XF86Display:              negative
     ${root}x:                 terminal
     ${root}b:                 browser
+    ${root}Shift-Home:        music_play!
     F9:                       nein
 
     #-------------------------------------------------------------------------
