Added memory and removed some keybindings; use xcompmgr

--- a/config.yaml
+++ b/config.yaml
@@ -99,7 +99,7 @@ display:
     - network:
         params:
           interface: eth0
-    #- memory:
+    - memory:
     - loadavg:
         params:
           critical: 8.0
@@ -117,6 +117,7 @@ display:
 script:
   after: |
     launch '/home/amukherjee/bin/wallpaper.sh'
+    launch 'xcompmgr -cC -r 0'
 
 control:
   action:
@@ -361,8 +362,8 @@ control:
     ${size}2:                 zoom_group
     ${size}1:                 unzoom_group
 
-    ${size}0:                 detach_group
-    ${size}9:                 attach_client
+    #${size}0:                 detach_group
+    #${size}9:                 attach_client
 
     #-------------------------------------------------------------------------
     # volume
